--- a/style.css
+++ b/style.css
@@ -7,14 +7,46 @@ body{
     font-family: Arial, Helvetica, sans-serif
 }
 
-.answer-field{
-    position: fixed;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%);
-    margin: 0 auto;
-    outline: red dashed 1px;
+#gameWindow{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#correctResults{
+    color: green;
+}
+
+#falseResults{
+    color: red;
+}
+
+#timerBox{
+    border: 1px solid #514434;
+    background-color: #232323;
+    box-sizing: border-box;
+    width: 50%;
+    margin-bottom: 15px;
+    height: 20px;
+}
+
+#Timer{
+    height: 100%;
+    width: 100%;
+}
+
+#bottomField{
     max-width: 720px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#answer-field{
+    
     width: 100%;
     height: 100px;
     display: flex;
@@ -22,6 +54,8 @@ body{
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
+
 
 .answer{
     width: 45%;
