--- a/style.css
+++ b/style.css
@@ -7,10 +7,39 @@ body{
     font-family: Arial, Helvetica, sans-serif
 }
 
-#gameWindow{
+#StartUp{
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#desc{
+    width: 720px;
+}
+
+#PlayButton{
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    border: 1px solid #514434;
+    background-color: #232323;
+    box-sizing: border-box;
+    padding: 4px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#gameWindow{
+
+    height: 100vh;
+    width: 100vw;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
