--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -9,7 +12,7 @@ body{
 
 #StartUp{
     height: 100vh;
-    width: 100vw;
+    width: 90vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
